vpc.tf
resource "aws_vpc" "default" {
    cidr_block =  var.vpc_cidr
    enable_dns_hostnames = true
    tags = {
        Name = var.vpc_name
        Owner = "hivemahesh"
        environment = local.new_environment
        terraform-Managed = "Yes"
        ProjectID = local.projid
    }
}

resource "aws_internet_gateway" "default" {
    vpc_id =  aws_vpc.default.id
    tags = {
        Name = "${var.vpc_name}-IGW"
        Terraform-Managed = "Yes"
        Env = local.new_environment
        ProjectID = local.projid
    }
}
